Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.0.0 Beta 2
-
Fix Version/s: 5.0.0 RC 1
-
Component/s: Core: Event loop
-
Labels:
-
Environment:Mac 10.7 and Mac 10.8 using RC package from:
http://origin.releases.qt-project.org/digia/5.0.0_rc1/backups/2012-11-19-345/
-
Platform/s:
-
Commits:5dbcd9dfea9785befdbe051b926f1d4e4ad0980a
Description
When trying to add files to a resource file, the dialog does not show.
Steps to reproduce.
1 - Open a project
2 - Right click and select "Add New File">Qt>"Resource File"
3 - On the opened resource file, click "Add->"add prefix"
4 - Then select "Add"->"Add Files"
Problem => the dialog seems to show and the disappear immediately.
Attachments
Issue Links
- is related to
-
QTCREATORBUG-8310 Mac: Add existing file action does not work
-
- Closed
-
- is required for
-
QTBUG-27426 Qt 5.0 Final release tasks
-
- Closed
-