src/plugins/platforms/cocoa/qcocoacolordialoghelper.mm
@@ -282,6 +282,10 @@ static NSButton *macCreateButton(const char *text, NSView *superview)
     mDialogIsExecuting = true;
     [mColorPanel setDelegate:self];
     [mColorPanel setContinuous:YES];
+    // Call processEvents in case the event dispatcher has been interrupted, and needs to do
+    // cleanup of modal sessions. Do this before showing the native dialog, otherwise it will
+    // close down during the cleanup.
+    qApp->processEvents(QEventLoop::ExcludeUserInputEvents | QEventLoop::ExcludeSocketNotifiers);
     [NSApp runModalForWindow:mColorPanel];
     return (mResultCode == NSOKButton);
 }
